# openhttpa-rs

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  .prettierignore  API.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  LICENSE-MIT  Makefile  PATENTS.md  README.md  SECURITY.md  audit.json  clippy.toml  deny.toml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml
bindings/c/: Cargo.toml  README.md  build.rs
bindings/c/examples/: main.c  run.sh
bindings/c/include/: openhttpa.h
bindings/c/src/: lib.rs
bindings/java/: Cargo.toml  README.md  Test.java
bindings/java/org/openhttpa/: ConfidentialClient.java
bindings/java/src/: lib.rs
bindings/nodejs/: Cargo.toml  README.md  build.rs  index.d.ts  index.js  package.json
bindings/nodejs/examples/: chat_example.js  run.sh
bindings/nodejs/src/: lib.rs
bindings/nodejs/test/: index.mjs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/examples/: chat_example.py  run.sh
bindings/python/src/: lib.rs
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/examples/: index.html  run.sh
bindings/wasm/src/: crypto.rs  lib.rs
crates/openhttpa-a2a/: API_spec.md  Cargo.toml  README.md
crates/openhttpa-a2a/examples/: orchestration.rs  swarm_agent.rs
crates/openhttpa-a2a/src/: agent.rs  handshake.rs  lib.rs  router.rs  types.rs
crates/openhttpa-a2a/tests/: e2e_swarm_test.rs  integration.rs
crates/openhttpa-agent-server/: Cargo.toml
crates/openhttpa-agent-server/src/: auth.rs  main.rs  state.rs
crates/openhttpa-agent-server/src/agent/: aiql_pipeline.rs  mod.rs
crates/openhttpa-agent-server/src/graphql/: attestation.rs  keys.rs  messages.rs  mod.rs
crates/openhttpa-agent-server/src/graphql/domains/: commerce.rs  finance.rs  medical.rs  (+2 more)
crates/openhttpa-aiql/: Cargo.toml
crates/openhttpa-aiql/src/: lib.rs  parser.rs
crates/openhttpa-attestation/: API_spec.md  Cargo.toml  README.md
crates/openhttpa-attestation/examples/: federated_mock_mesh.rs
crates/openhttpa-attestation/src/: collateral_fetcher.rs  composite.rs  dcap_zk_verifier.rs  eat.rs  federation.rs  ita_verifier.rs  lib.rs  maa_verifier.rs  mock_verifier.rs  nvidia_remote_verifier.rs  nvidia_verifier.rs  policy.rs  snp_verifier.rs  tests.rs  tpm_verifier.rs  verifier.rs
crates/openhttpa-client/: API_spec.md  Cargo.toml  README.md
crates/openhttpa-client/examples/: full_oblivious_client.rs  nvidia_gpu_attestation.rs
crates/openhttpa-client/src/: builder.rs  client.rs  lib.rs
crates/openhttpa-client/tests/: composite.rs
crates/openhttpa-config/: Cargo.toml
crates/openhttpa-config/src/: lib.rs
crates/openhttpa-core/: API_spec.md  Cargo.toml  README.md
crates/openhttpa-core/examples/: resumption_example.rs
crates/openhttpa-core/src/: handshake.rs  lib.rs  replay_guard.rs  state.rs
crates/openhttpa-core/src/session/: builder.rs  mod.rs  sealed.rs  ticket.rs
crates/openhttpa-crypto/: API_spec.md  Cargo.toml  README.md
crates/openhttpa-crypto/examples/: gen_vectors.rs
crates/openhttpa-crypto/src/: aead.rs  hkdf.rs  hpke.rs  key_exchange.rs  lib.rs  nonce.rs  pqc.rs  scratch.rs  signature.rs
crates/openhttpa-crypto/tests/: persistence.rs
crates/openhttpa-fabric/: Cargo.toml  README.md
crates/openhttpa-fabric/src/: lib.rs  mcp_tools.rs  metrics.rs  policy.rs  replication.rs  store.rs
crates/openhttpa-fabric/tests/: swarm_validation.rs
crates/openhttpa-grpc/: API_spec.md  Cargo.toml  README.md  build.rs
crates/openhttpa-grpc/proto/: openhttpa.proto
crates/openhttpa-grpc/src/: lib.rs  service.rs
crates/openhttpa-headers/: API_spec.md  Cargo.toml  README.md
crates/openhttpa-headers/src/: attest_headers.rs  lib.rs  method.rs  trailers.rs
crates/openhttpa-identity-chain/: Cargo.toml
crates/openhttpa-identity-chain/src/: lib.rs
crates/openhttpa-ingress/: Cargo.toml
crates/openhttpa-ingress/examples/: basic_ingress.rs
crates/openhttpa-ingress/src/: main.rs  router.rs
crates/openhttpa-llm/: API_spec.md  Cargo.toml  README.md
crates/openhttpa-llm/examples/: verified_ai.rs
crates/openhttpa-llm/src/: client.rs  enclave_inference.rs  lib.rs  types.rs
crates/openhttpa-mcp/: API_spec.md  Cargo.toml  README.md
crates/openhttpa-mcp/src/: client.rs  lib.rs  server.rs  types.rs
crates/openhttpa-mesh/: API_spec.md  Cargo.toml  README.md
crates/openhttpa-mesh/examples/: basic_swarm.rs  complex_delegation.rs  massive_swarm.rs
crates/openhttpa-mesh/src/: default_policies.rego  lib.rs  node.rs  policy.rs  provenance.rs  registry.rs
crates/openhttpa-oracle/: API_spec.md  Cargo.toml
crates/openhttpa-oracle/src/: lib.rs  main.rs  oracle.rs  protocol.rs
crates/openhttpa-oracle/tests/: oracle_integration_test.rs
crates/openhttpa-proto/: API_spec.md  Cargo.toml  README.md
crates/openhttpa-proto/formal/: handshake.pv
crates/openhttpa-proto/src/: constants.rs  error.rs  lib.rs  types.rs
crates/openhttpa-server/: API_spec.md  Cargo.toml  README.md
crates/openhttpa-server/examples/: attestation_hub.rs  remote_attestation.rs
crates/openhttpa-server/src/: atb_registry.rs  builder.rs  extractors.rs  handlers.rs  lib.rs  middleware.rs  rate_limit.rs  replay_guard_fs.rs  replay_guard_redis.rs  ticket_engine_fs.rs  ws.rs
crates/openhttpa-spiffe/: Cargo.toml  README.md
crates/openhttpa-spiffe/examples/: spiffe_attestation.rs
crates/openhttpa-spiffe/src/: lib.rs
crates/openhttpa-tee/: API_spec.md  Cargo.toml  README.md
crates/openhttpa-tee/examples/: composite_attestation.rs
crates/openhttpa-tee/src/: aws_nitro.rs  collateral.rs  evidence.rs  lib.rs  mock.rs  nvidia_gpu.rs  provider.rs  sev_snp.rs  sgx.rs  tdx.rs  telemetry.rs  tests.rs  tpm.rs  trustzone.rs
crates/openhttpa-telemetry/: Cargo.toml  README.md
crates/openhttpa-telemetry/examples/: emit_confidential_logs.rs
crates/openhttpa-telemetry/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_aead_decrypt.rs  fuzz_handshake_json.rs  fuzz_headers.rs  fuzz_quote_parse.rs
(+188 files in other folders)
