[package]
name = "openhttpa-fuzz"
version = "0.0.0"
edition = "2021"
publish = false
# Same dual-license as the rest of the workspace.
# cargo-deny requires a license field to avoid an `unlicensed` error, even for
# internal crates that are never published.
license = "Apache-2.0 OR MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
openhttpa-headers = { path = "../crates/openhttpa-headers" }
openhttpa-proto   = { path = "../crates/openhttpa-proto" }
bytes      = "1"
http       = "1"
serde_json = "1"

# NOTE: [profile.*] sections in workspace members are ignored by Cargo.
# The debug=true setting needed for cargo-fuzz is applied via a per-package
# profile override at the workspace root:
#   [profile.release.package.openhttpa-fuzz]
#   debug = true
# See: https://doc.rust-lang.org/cargo/reference/profiles.html#overrides

[[bin]]
name = "fuzz_headers"
path = "fuzz_targets/fuzz_headers.rs"
test = false
doc = false

[[bin]]
name = "fuzz_quote_parse"
path = "fuzz_targets/fuzz_quote_parse.rs"
test = false
doc = false
