[package]
name        = "openhttpa-node"
description = "OpenHTTPA Node.js bindings via napi-rs"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
openhttpa-client  = { workspace = true }
openhttpa-proto   = { workspace = true }
openhttpa-tee     = { workspace = true }
openhttpa-attestation = { workspace = true }
openhttpa-llm     = { workspace = true }
openhttpa-mcp     = { workspace = true }
openhttpa-a2a       = { workspace = true }
http           = { workspace = true }
napi           = { workspace = true, features = ["napi4", "async", "serde-json"] }
napi-derive    = { workspace = true }
tokio          = { workspace = true, features = ["rt-multi-thread"] }
serde_json     = { workspace = true }

[build-dependencies]
napi-build = "2"

[features]
# Enable mock TEE provider for testing on non-TEE hardware
mock = ["openhttpa-client/mock"]
