[package]
name        = "openhttpa-wasm"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
description = "OpenHTTPA browser Wasm bindings — pure-Rust client-side AtHS"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Wasm glue
wasm-bindgen       = "0.2"
js-sys             = "0.3"
web-sys            = { version = "0.3", features = ["console"] }

# Serialisation
serde              = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json         = { workspace = true }

# Encryption
aes-gcm            = { workspace = true }
aead               = "0.5"
base64ct           = { workspace = true }

# Classical ECDHE (X25519)
x25519-dalek = { version = "2", features = ["static_secrets"] }

# Post-quantum KEM (ML-KEM-768, FIPS 203)
ml-kem = "0.2"

# HKDF + SHA-2
hkdf = { workspace = true }
sha2 = { workspace = true }

# Secure random entropy in the browser.
getrandom = { workspace = true, features = ["js"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# Hex encoding / decoding
hex = { workspace = true }
openhttpa-proto   = { path = "../../crates/openhttpa-proto", version = "0.1.0" }
openhttpa-headers = { path = "../../crates/openhttpa-headers", version = "0.1.0" }
http = { workspace = true }
hmac = { workspace = true }

# Zeroize secrets on drop
zeroize = { workspace = true, features = ["derive"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
