[package]
name = "openhttpa-aiql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AIQL Semantic Policy Engine for OpenHTTPA"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
openhttpa-core = { workspace = true }
openhttpa-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
