[package]
name        = "openhttpa-attestation"
description = "OpenHTTPA — quote verification: Intel DCAP, Azure MAA, AMD SNP VCEK, pluggable"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default   = ["mock"]
mock      = []
dcap      = []         # Intel DCAP via sgx-dcap-quoteverify (system library)
maa       = ["jsonwebtoken"] # Azure MAA REST API
ita       = ["jsonwebtoken"] # Intel Trust Authority REST API
amd_snp   = []          # AMD SNP VCEK chain via system library

[dependencies]
openhttpa-proto = { workspace = true }
openhttpa-tee   = { workspace = true }
openhttpa-zk    = { path = "../openhttpa-zk" }
bytes        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
async-trait  = { workspace = true }
ciborium     = { workspace = true }
coset        = { workspace = true }
reqwest      = { workspace = true, features = ["json", "rustls-tls"] }
jsonwebtoken = { version = "9", optional = true }
base64ct     = { workspace = true }
sha2         = "0.10"
tokio        = { workspace = true }
dashmap      = "6.0"
bincode      = "1.3"
hex          = "0.4"
risc0-zkvm   = { version = "1.2", default-features = false, features = ["prove"] }
zeroize      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
