[package]
name        = "openhttpa-attestation"
description = "OpenHTTPA — quote verification: Intel DCAP, Azure MAA, AMD SNP VCEK, pluggable"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default   = ["mock"]
mock      = []
dcap      = []         # Intel DCAP via sgx-dcap-quoteverify (system library)
maa       = ["jsonwebtoken"] # Azure MAA REST API
ita       = ["jsonwebtoken"] # Intel Trust Authority REST API
amd_snp   = ["sev"]    # AMD SEV-SNP VCEK chain verification (M4)

[dependencies]
openhttpa-proto  = { workspace = true }
openhttpa-crypto = { workspace = true }
openhttpa-tee    = { workspace = true }
openhttpa-zk     = { workspace = true }
aws-lc-rs        = { workspace = true }
oqs              = { workspace = true }
bytes        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
ciborium     = { workspace = true }
coset        = { workspace = true }
futures      = { workspace = true }
reqwest      = { workspace = true, features = ["json", "rustls-tls"] }
jsonwebtoken = { version = "9", optional = true }
base64ct     = { workspace = true }
sha2         = "0.10"
tokio        = { workspace = true }
dashmap      = "6.0"
bincode      = "1.3"
hex          = "0.4"
risc0-zkvm   = { version = "1.2", default-features = false, features = ["prove"] }
zeroize      = { workspace = true }
# AMD SEV-SNP (M4) — same version pinned in openhttpa-tee
sev          = { version = "7.1.0", optional = true, features = ["snp"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
openhttpa-tee = { workspace = true, features = ["mock"] }
