[package]
name = "openhttpa-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Global configuration and constants for the OpenHTTPA workspace"

[dependencies]
