[package]
name = "openhttpa-fabric"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Secure Distributed Memory Fabric for AI Agents over OpenHTTPA"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
openhttpa-a2a = { path = "../openhttpa-a2a", version = "0.1.1" }
openhttpa-core = { path = "../openhttpa-core", version = "0.1.1" }
openhttpa-mcp = { path = "../openhttpa-mcp", version = "0.1.1" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }

hex = { workspace = true }
regorus = "0.2.8"
lru = "0.16.3"
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

