[package]
name = "openhttpa-fabric"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Secure Distributed Memory Fabric for AI Agents over OpenHTTPA"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
openhttpa-a2a = { workspace = true }
openhttpa-core = { workspace = true }
openhttpa-mcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
openhttpa-tee = { workspace = true }
openhttpa-proto = { workspace = true }
openhttpa-attestation = { workspace = true }
openhttpa-crypto = { workspace = true }
aes-gcm = { workspace = true }

hex = { workspace = true }
regorus = "0.10"
lru = "0.16.3"
rand = { workspace = true }
rocksdb = "0.21.0"

[dev-dependencies]
proptest = { workspace = true }

