[package]
name        = "openhttpa-headers"
description = "OpenHTTPA — Attest-* HTTP header definitions (RFC 9651 Structured Field Values)"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
openhttpa-proto = { workspace = true }
sfv          = "0.14"
http         = { workspace = true }
bytes        = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }
base64ct     = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
