[package]
name = "openhttpa-identity-chain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Blockchain DID and MRENCLAVE Resolution for OpenHTTPA"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
openhttpa-core = { workspace = true }
openhttpa-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
alloy = { version = "2.0", features = ["full"] }
url = "2"
