[package]
name = "openhttpa-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true

[dependencies]
openhttpa-core = { workspace = true }
openhttpa-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
openhttpa-tee = { workspace = true }
